# lab6

./: CMakeLists.txt  README.md  main.cpp
Domain/: Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
Repository/: Repository.cpp  Repository.h
UI/: Console.cpp  Console.h  Run_Menu.cpp  Run_Menu.h  option.cpp  option.h
